log
Sat Mar 12 17:30:34 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c= a+b;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
c9a03e3
